[gd_scene load_steps=3 format=3 uid="uid://5adjcejb1cpq"]

[ext_resource type="Script" path="res://multiplayer_files/escape_menu_scene/escape_menu_scene.gd" id="1_kb3ki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thuqc"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.121569)

[node name="EscapeMenuScene" type="Control"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kb3ki")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_thuqc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -96.0
offset_right = 150.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Escape Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
text = "Resume"

[node name="settings_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
text = "Settings"

[node name="quit_game_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_game_button" to="." method="_on_quit_game_button_pressed"]
